<resources>
    <string name="pref_header_permissions">Permissions</string>
    <string name="pref_header_remotes">Remotes</string>
    <string name="pref_header_remote">Remote</string>
    <string name="pref_header_configuration">Configuration</string>
    <string name="pref_header_behavior">Behavior</string>
    <string name="pref_header_app_lock">App lock</string>
    <string name="pref_header_advanced">Advanced</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_debug">Debug</string>
    <string name="pref_inhibit_battery_opt_name">Disable battery optimization</string>
    <string name="pref_inhibit_battery_opt_desc">Needed to upload files in the background.</string>
    <string name="pref_allow_notifications_name">Allow notifications</string>
    <string name="pref_allow_notifications_desc">Needed to show when files are being uploaded in the background.</string>
    <string name="pref_allow_local_network_name">Allow local network access</string>
    <string name="pref_allow_local_network_desc">Needed to connect to hosts on the local network.</string>
    <string name="pref_add_remote_name">Add a remote</string>
    <string name="pref_add_remote_desc">Add a new rclone remote configuration.</string>
    <string name="pref_import_configuration_name">Import configuration</string>
    <string name="pref_import_configuration_desc">Import an existing rclone configuration file.</string>
    <string name="pref_export_configuration_name">Export configuration</string>
    <string name="pref_export_configuration_desc">Export current rclone configuration to a file.</string>
    <string name="pref_add_file_extension_name">Add file extension</string>
    <string name="pref_add_file_extension_desc">When creating a new file, automatically add the file extension corresponding to the file type.</string>
    <string name="pref_pretend_local_name">Pretend to be local storage</string>
    <string name="pref_pretend_local_desc">Present the rclone remotes as local storage to the Storage Access Framework. This forces compatibility with apps that only allow selecting local files.</string>
    <string name="pref_local_storage_access_name">Allow local storage access</string>
    <string name="pref_local_storage_access_desc">Allows wrapper remotes, like <tt>crypt</tt>, to access local storage under <tt>/sdcard</tt>.</string>
    <string name="pref_require_auth_name">Require authentication</string>
    <string name="pref_require_auth_desc">Require biometric unlock or screen lock PIN/password to view and change RSAF settings.</string>
    <string name="pref_inactivity_timeout_name">Inactivity timeout</string>
    <plurals name="pref_inactivity_timeout_desc">
        <item quantity="one">Lock %d second after leaving the app.</item>
        <item quantity="other">Lock %d seconds after leaving the app.</item>
    </plurals>
    <string name="pref_lock_now_name">Lock now</string>
    <string name="pref_lock_now_desc">Lock the app now instead of waiting for the inactivity timeout.</string>
    <string name="pref_allow_backup_name">Allow Android backups</string>
    <string name="pref_allow_backup_desc">Allow app data to be backed up if Android claims that the transport is end-to-end encrypted or if it is being directly transferred to another device. RSAF cannot know if either of these conditions are actually true.</string>
    <string name="pref_version_name">Version</string>
    <string name="pref_verbose_rclone_logs_name">Verbose rclone logs</string>
    <string name="pref_verbose_rclone_logs_desc">Warning: The verbose logs may contain sensitive information, like authentication tokens.</string>
    <string name="pref_save_logs_name">Save logs</string>
    <string name="pref_save_logs_desc">Save logcat logs to a file. Note that the logs may contain names of remote files that have been accessed.</string>
    <string name="pref_add_internal_cache_remote_name">Add rclone internal cache remote</string>
    <string name="pref_add_internal_cache_remote_desc">Add a new <tt>alias</tt> remote that points to rclone\'s internal cache directory. This can be useful for troubleshooting VFS issues.</string>
    <string name="pref_edit_remote_open_name">Open remote</string>
    <string name="pref_edit_remote_open_desc">Open this remote in the system file manager.</string>
    <string name="pref_edit_remote_configure_name">Configure remote</string>
    <string name="pref_edit_remote_configure_desc">Rerun the rclone configuration wizard.</string>
    <string name="pref_edit_remote_rename_name">Rename remote</string>
    <string name="pref_edit_remote_rename_desc">Change the name of this remote. If other remotes depends on this one, they will need to be manually updated with the new name.</string>
    <string name="pref_edit_remote_duplicate_name">Duplicate remote</string>
    <string name="pref_edit_remote_duplicate_desc">Create a copy of this remote with identical configuration.</string>
    <string name="pref_edit_remote_delete_name">Delete remote</string>
    <string name="pref_edit_remote_delete_desc">Remove this remote from the configuration.</string>
    <string name="pref_edit_remote_allow_external_access_name">Allow external app access</string>
    <string name="pref_edit_remote_allow_external_access_desc">Allow external apps to access this remote via the system file manager. Access is not needed if this remote is just a backend for another remote.</string>
    <string name="pref_edit_remote_allow_locked_access_name">Allow access while locked</string>
    <string name="pref_edit_remote_allow_locked_access_desc_on">While RSAF is locked, files are still available to external apps that have been granted access.</string>
    <string name="pref_edit_remote_allow_locked_access_desc_off">While RSAF is locked, files are hidden from external apps and new file operations are blocked. Ongoing operations with files that are already open are unaffected.</string>
    <string name="pref_edit_remote_dynamic_shortcut_name">Show in launcher shortcuts</string>
    <string name="pref_edit_remote_dynamic_shortcut_desc">Include this remote in the list of shortcuts when long pressing RSAF\'s launcher icon.</string>
    <string name="pref_edit_remote_thumbnails_name">Enable thumbnails</string>
    <string name="pref_edit_remote_thumbnails_desc">Allow showing thumbnails for images, videos, and music (album art). This may result in additional network traffic when browsing files.</string>
    <string name="pref_edit_remote_report_usage_name">Report filesystem usage</string>
    <string name="pref_edit_remote_report_usage_desc_loading">(Checking if filesystem usage reporting is supported…)</string>
    <string name="pref_edit_remote_report_usage_desc_supported">Report free space and total space to client apps. For some remote types, this can significantly slow down client apps when they fetch the list of remotes.</string>
    <string name="pref_edit_remote_report_usage_desc_unsupported">This remote type does not support reporting its free space and total space.</string>
    <string name="pref_edit_remote_vfs_options_name">Custom VFS options</string>
    <string name="pref_edit_remote_vfs_options_desc">Set custom rclone VFS options supported by <tt>rclone mount</tt>.</string>
    <string name="action_details">Details</string>
    <string name="dialog_error_details_title">Error details</string>
    <string name="alert_browser_not_found">No web browser is available.</string>
    <string name="alert_documentsui_not_found">Android\'s builtin file manager (DocumentsUI) is unavailable.</string>
    <string name="alert_list_remotes_failure">Failed to get list of remotes</string>
    <string name="alert_add_remote_success">Successfully added new remote %1$s</string>
    <string name="alert_add_remote_partial">Partially added new remote %1$s due to interruption</string>
    <string name="alert_import_success">Successfully imported configuration</string>
    <string name="alert_import_failure">Failed to import configuration</string>
    <string name="alert_import_cancelled">Configuration import cancelled</string>
    <string name="alert_export_success">Successfully exported configuration</string>
    <string name="alert_export_failure">Failed to export configuration</string>
    <string name="alert_export_cancelled">Configuration export cancelled</string>
    <string name="alert_logcat_success">Successfully saved logs to %1$s</string>
    <string name="alert_logcat_failure">Failed to save logs to %1$s</string>
    <string name="alert_edit_remote_success">Successfully edited remote %1$s</string>
    <string name="alert_delete_remote_failure">Failed to delete remote %1$s</string>
    <string name="alert_rename_remote_failure">Failed to rename remote %1$s to %2$s</string>
    <string name="alert_duplicate_remote_failure">Failed to duplicate remote %1$s to %2$s</string>
    <string name="alert_set_config_failure">Failed to set %1$s config option for remote %2$s</string>
    <string name="biometric_title">Unlock configuration</string>
    <string name="biometric_error">Biometric authentication error: %1$s</string>
    <string name="biometric_error_cancelled">Unlock operation cancelled</string>
    <string name="biometric_ignore">Ignoring app lock because device has no screen lock configured</string>
    <string name="dialog_action_back">Back</string>
    <string name="dialog_action_next">Next</string>
    <string name="dialog_action_authorize">Authorize</string>
    <string name="dialog_action_proceed_anyway">Proceed anyway</string>
    <string name="dialog_remote_name_message">Enter a name for the remote.</string>
    <string name="dialog_remote_name_hint">Remote name</string>
    <string name="dialog_add_remote_title">Add remote</string>
    <string name="dialog_rename_remote_title">Rename %1$s</string>
    <string name="dialog_duplicate_remote_title">Duplicate %1$s</string>
    <string name="dialog_delete_remote_title">Delete %1$s</string>
    <string name="dialog_authorize_title">Waiting for authorization</string>
    <string name="dialog_authorize_message_loading">Waiting for rclone webserver to start.</string>
    <string name="dialog_authorize_message_url">Open the following link to authorize rclone for access to the backend. Once authorized, the token will be automatically inserted in the previous screen.</string>
    <string name="dialog_import_password_title">Config import</string>
    <string name="dialog_import_password_message">The selected config file is encrypted. Enter the decryption password to import it.</string>
    <string name="dialog_import_password_hint">Decryption password</string>
    <string name="dialog_export_password_title">Config export</string>
    <string name="dialog_export_password_message">Enter a password to encrypt the exported config file or leave empty to store it in plain text.</string>
    <string name="dialog_export_password_hint">Encryption password</string>
    <string name="dialog_export_password_confirm_hint">Confirm password</string>
    <string name="dialog_inactivity_timeout_title">Inactivity timeout</string>
    <string name="dialog_inactivity_timeout_message">Enter a duration in seconds.</string>
    <string name="dialog_vfs_cache_deletion_message">There are pending uploads in progress that may be interrupted. These will be permanently deleted from the VFS cache.</string>
    <string name="ic_title_add_remote">Add remote: %1$s</string>
    <string name="ic_title_edit_remote">Edit remote: %1$s</string>
    <string name="ic_text_box_helper_required">Value must not be empty.</string>
    <string name="ic_text_box_helper_not_required">Value can be empty.</string>
    <string name="ic_header_examples">Example options:</string>
    <string name="vfs_options_title">VFS options: %1$s</string>
</resources>